@@ -91,13 +91,13 @@ pub fn expand_sql_function(errors: &mut Vec<syn::Error>, function: SqlFunction, 
 	let body = match query_type.unwrap_or(QueryType::Execute) {
 		QueryType::Execute => quote! {
 			let params: &[&(dyn ::tokio_postgres::types::ToSql + ::core::marker::Sync)] = #params;
-			let result = client.execute(#query, params)#await_future;
+			let result: ::core::result::Result<u64, ::tokio_postgres::Error> = client.execute(#query, params)#await_future;
 			let result = #handle_err;
 			Ok(())
 		},
 		QueryType::CountRows => quote! {
 			let params: &[&(dyn ::tokio_postgres::types::ToSql + ::core::marker::Sync)] = #params;
-			let result = client.execute(#query, params)#await_future;
+			let result: ::core::result::Result<u64, ::tokio_postgres::Error> = client.execute(#query, params)#await_future;
 			let result = #handle_err;
 			Ok(result)
 		},
@@ -106,9 +106,10 @@ pub fn expand_sql_function(errors: &mut Vec<syn::Error>, function: SqlFunction, 
 			quote! {
 				let params: &[&(dyn ::tokio_postgres::types::ToSql + ::core::marker::Sync)] = #params;
 				let params = params.iter().map(|x| *x as &dyn ::tokio_postgres::types::ToSql);
-				let result = client.query_raw(#query, params)#await_future;
-				let mut stream = ::core::pin::pin!(#handle_err);
-				let mut output = ::std::vec::Vec::new();
+				let result: ::core::result::Result<::tokio_postgres::RowStream, ::tokio_postgres::Error> = client.query_raw(#query, params)#await_future;
+				let stream: ::tokio_postgres::RowStream = #handle_err;
+				let mut stream = ::core::pin::pin!(stream);
+				let mut output = ::std::vec::Vec::<#elem_type>::new();
 				while let ::core::option::Option::Some(result) = stream.next()#await_future {
 					let row = #handle_err;
 					let elem = #map_elem;
@@ -120,14 +121,14 @@ pub fn expand_sql_function(errors: &mut Vec<syn::Error>, function: SqlFunction, 
 		QueryType::Stream => quote! {
 			let params: &[&(dyn ::tokio_postgres::types::ToSql + ::core::marker::Sync)] = #params;
 			let params = params.iter().map(|x| *x as &dyn ::tokio_postgres::types::ToSql);
-			let result = client.query_raw(#query, params)#await_future;
+			let result: ::core::result::Result<::tokio_postgres::RowStream, ::tokio_postgres::Error> = client.query_raw(#query, params)#await_future;
 			::core::result::Result::Ok(#handle_err)
 		},
 		QueryType::Optional(elem_type) => {
 			let map_elem = map_elem(elem_type);
 			quote! {
 				let params: &[&(dyn ::tokio_postgres::types::ToSql + ::core::marker::Sync)] = #params;
-				let result = client.query_opt(#query, params)#await_future;
+				let result: ::core::result::Result<::core::option::Option<::tokio_postgres::Row>, ::tokio_postgres::Error> = client.query_opt(#query, params)#await_future;
 				match #handle_err {
 					::core::option::Option::None => ::core::result::Result::Ok(::core::option::Option::None),
 					::core::option::Option::Some(row) => {
@@ -141,7 +142,7 @@ pub fn expand_sql_function(errors: &mut Vec<syn::Error>, function: SqlFunction, 
 			let map_elem = map_elem(elem_type);
 			quote! {
 				let params: &[&(dyn ::tokio_postgres::types::ToSql + ::core::marker::Sync)] = #params;
-				let result = client.query_one(#query, params)#await_future;
+				let result: ::core::result::Result<::tokio_postgres::Row, ::tokio_postgres::Error> = client.query_one(#query, params)#await_future;
 				let row = #handle_err;
 				#map_elem
 			}
